<?xml version="1.0"?>
<package format="2">
  <name>serial_reader</name>
  <version>0.0.1</version>
  <description>Serial reader node to read data from a serial port and publish it.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- 依赖关系 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <!-- 其他的工具可以在这里添加 -->
  </export>
</package>

